# CGRCW2

./: BVH.cpp  BVH.h  BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Cylinder.cpp  Cylinder.h  ImageWriter.cpp  ImageWriter.h  ImportParser.cpp  ImportParser.h  Light.cpp  Light.h  Lightsource.h  Makefile  Material.cpp  Material.h  Pinhole.h  Pointlight.h  Ray.h  RayStructures.h  RayTracer.cpp  RayTracer.h  RayTracer.h.gch  Scene.cpp  Scene.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Texture.h  Triangle.cpp  Triangle.h  Vec3.cpp  Vec3.h  a.out  raytracer  scrip.sh
CGRCW2/__MACOSX/CGRCW2/: ._binary_primitves.json  ._mirror_image.json  ._scene.json  ._simple_phong.json
imports/: cluttered_scene.json  empty.json  experiments.json  object_showcase.json
tests/: CMakeLists.txt  basicSceneRenderingTest.cpp  jsonFileContentValidationTest.cpp  jsonFileExistsTest.cpp  lightSourcesRenderingTest.cpp  sceneComplexityTest.cpp  sceneObjectCreationTest.cpp  shapesRenderingTest.cpp  standardSceneRenderingTest.cpp
